# compliance-workflow-demo

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/corpus/: README.md
backend/corpus/sources/: synth_fund_01.txt  synth_fund_02.txt  synth_fund_04.txt  synth_fund_05.txt  synth_fund_06.txt
backend/migrations/: 003_router_calls.sql
backend/rules/: balanced_risk.yaml  forward_looking.yaml  no_guarantees.yaml
backend/scripts/: demo_run.py  generate_corpus.py  verify_matrix.py
backend/src/compliance_workflow_demo/api/: app.py
backend/src/compliance_workflow_demo/dsl/: compiler.py  graph.py
backend/src/compliance_workflow_demo/executor/: __init__.py  result.py
backend/src/compliance_workflow_demo/ingest/: chunker.py
backend/src/compliance_workflow_demo/obs/: tracing.py
backend/src/norm_demo/api/: __init__.py  resources.py  runs.py  schemas.py
backend/src/norm_demo/db/: __init__.py  cache.py  connection.py  repo.py
backend/src/norm_demo/dsl/: __init__.py  schema.py
backend/src/norm_demo/executor/: __init__.py  check.py  orchestrator.py  prompts.py  run.py
backend/src/norm_demo/ingest/: __init__.py  pdf.py  types.py
backend/src/norm_demo/router/: __init__.py  breaker.py  retry.py  types.py
backend/src/norm_demo/router/adapters/: anthropic.py  mock.py
backend/tests/: test_api.py  test_db_migrate.py  test_dsl_schema.py  test_executor_cache.py  test_executor_check.py  test_ingest_pdf.py  test_router.py  test_router_retry.py  test_smoke.py
corpus/: README.md
frontend/: package-lock.json  package.json  vite.config.ts
infra/: docker-compose.yml
migrations/: 001_runs.sql  002_findings.sql  003_router_calls.sql
rules/: fees_disclosed.yaml  perf_disclaimer.yaml
scripts/: ab-bench.py  ab-compare.sh  demo_run.py  dev.sh  generate_corpus.py  otel_smoke.py  smoke.sh  verify_matrix.py
tests/: conftest.py  test_api.py  test_db_repo.py  test_dsl_compiler.py  test_dsl_schema.py  test_router.py  (+5 more)
(+39 files in other folders)
