[project]
name = "compliance-workflow-demo"
version = "0.1.0"
description = "Compliance DSL + outage-resilient LLM router demo ((redacted) interview)"
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_workflow_demo"]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
